<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_padding_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zybooks.pizzaparty.MainActivity"
    android:background="@drawable/pizza_background"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPeople"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text"
        android:background="@color/background_black"
        android:freezesText="true" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="10"
        android:background="@color/background_black_light"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group"
        android:background="@color/background_black"/>

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_black">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:background="@color/background_black"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        style="@style/CoolButton"/>
</LinearLayout>